# oracle-sql-splitter

./: .gitignore  README.md  RELEASE.md  main.py  pyproject.toml  smoke.sql
.github/workflows/: ci.yml  publish.yml
src/oracle_sql_splitter/: __init__.py  cli.py  splitter.py
tests/: test_splitter.py
