[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oracle-sql-splitter"
version = "0.1.0"
description = "Split Oracle SQL and PL/SQL scripts into executable statements."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Your Name" }
]
keywords = ["oracle", "sql", "plsql", "splitter", "parser"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "pytest>=8.0",
  "twine>=5.0"
]

[project.scripts]
oracle-sql-splitter = "oracle_sql_splitter.cli:main"

[project.urls]
Homepage = "https://github.com/your-username/oracle-sql-splitter"
Repository = "https://github.com/your-username/oracle-sql-splitter"
Issues = "https://github.com/your-username/oracle-sql-splitter/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
